crates/core/tests/snapshots/un_possible_constructor_return_rule__handles_multiple_pcr_helpers_in_same_module.snap
---
source: crates/core/tests/un_possible_constructor_return_rule.rs
expression: output
---
const x = Parent.call(this);
const y = Other.call(this);
