crates/core/tests/snapshots/un_possible_constructor_return_rule__removes_declaration_when_all_calls_replaced.snap
---
source: crates/core/tests/un_possible_constructor_return_rule.rs
expression: output
---
const x = Parent.call(this);
